--- a/res/menu/main_activity_actions.xml
+++ b/res/menu/main_activity_actions.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
       xmlns:myapp="http://schemas.android.com/apk/res-auto">
   <!-- Search, should appear as action button -->
   <item
       android:id="@+id/action_search"
       android:icon="@drawable/ic_action_search"
       android:title="@string/action_search"
-      android:showAsAction="ifRoom"
-      myapp:showAsAction="ifRoom"/>
+      myapp:showAsAction="ifRoom"
+      tools:targetApi="11"
+      android:showAsAction="ifRoom"/>
   <!-- Settings, should always be in the overflow -->
   <item
       android:id="@+id/action_settings"
+      android:icon="@drawable/ic_action_settings"
       android:title="@string/action_settings"
-      android:showAsAction="never"
-      myapp:showAsAction="never"/>
+      myapp:showAsAction="never"
+      tools:targetApi="11"
+      android:showAsAction="never"/>
 </menu>
